<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_width="match_parent"
		android:text="About"
		android:layout_margin="10dp"
		android:padding="10dp"
		android:gravity="center"
		android:textSize="34sp"
		android:typeface="monospace"/>

	<ScrollView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:padding="10dp">

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:text="Details"
				android:typeface="serif"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/working"
				android:typeface="monospace"
				android:textColor="#000000"
				android:padding="5dp"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:text="Working Process"
				android:typeface="serif"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/guide"
				android:textColor="#000000"
				android:typeface="monospace"
				android:padding="5dp"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:text="@string/vulink"
				android:layout_gravity="center"
				android:id="@+id/vu_link"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:text="Feedback"
				android:typeface="serif"
				android:layout_marginTop="20dp"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/feed"
				android:padding="5dp"
				android:typeface="sans"
				android:textColor="#0C689D"/>

		</LinearLayout>

	</ScrollView>

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_width="wrap_content"
		android:text="#DevSan"
		android:layout_gravity="bottom|center"
		android:typeface="serif"
		android:textColor="#000000"
		android:textStyle="bold|italic"
		android:padding="10dp"
		android:layout_marginTop="100dp"/>

</LinearLayout>

