<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:background="@drawable/mlin_bg3">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:gravity="top|center"
			android:orientation="vertical">

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:layout_width="wrap_content"
				android:text="@string/header_1"
				android:typeface="monospace"
				android:textSize="29sp"
				android:textStyle="bold"
				android:layout_margin="15dp"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical"
				android:padding="10dp">

				<TextView
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_width="wrap_content"
					android:text="@string/subheader_1"
					android:padding="5dp"
					android:layout_gravity="center"
					android:textStyle="italic"
					android:typeface="serif"
					android:textColor="#0098F0"
					android:shadowRadius="2.0"/>

				<View
					style="@style/Divider"/>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:layout_margin="10dp">

					<EditText
						android:layout_height="wrap_content"
						android:inputType="numberDecimal"
						android:layout_width="wrap_content"
						android:ems="10"
						android:hint="1st Semester SGPA"
						android:id="@+id/sgpa1"/>

					<EditText
						android:layout_height="wrap_content"
						android:inputType="number"
						android:layout_width="wrap_content"
						android:ems="10"
						android:hint="Credit : 20"
						android:id="@+id/crdt1"
						android:layout_marginLeft="10dp"/>

				</LinearLayout>

				<View
					style="@style/Divider"/>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:layout_margin="10dp">

					<EditText
						android:layout_height="wrap_content"
						android:inputType="numberDecimal"
						android:layout_width="wrap_content"
						android:ems="10"
						android:hint="2nd Semester SGPA"
						android:id="@+id/sgpa2"/>

					<EditText
						android:layout_height="wrap_content"
						android:inputType="number"
						android:layout_width="wrap_content"
						android:ems="10"
						android:hint="Credit : 22"
						android:id="@+id/crdt2"
						android:layout_marginLeft="10dp"/>

				</LinearLayout>

				<View
					style="@style/Divider"/>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:layout_margin="10dp">

					<EditText
						android:layout_height="wrap_content"
						android:inputType="numberDecimal"
						android:layout_width="wrap_content"
						android:ems="10"
						android:hint="3rd Semester SGPA"
						android:id="@+id/sgpa3"/>

					<EditText
						android:layout_height="wrap_content"
						android:inputType="number"
						android:layout_width="wrap_content"
						android:ems="10"
						android:hint="Credit : 26"
						android:id="@+id/crdt3"
						android:layout_marginLeft="10dp"/>

				</LinearLayout>

				<View
					style="@style/Divider"/>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:layout_margin="10dp">

					<EditText
						android:layout_height="wrap_content"
						android:inputType="numberDecimal"
						android:layout_width="wrap_content"
						android:ems="10"
						android:hint="4th Semester SGPA"
						android:id="@+id/sgpa4"/>

					<EditText
						android:layout_height="wrap_content"
						android:inputType="number"
						android:layout_width="wrap_content"
						android:ems="10"
						android:hint="Credit : 26"
						android:id="@+id/crdt4"
						android:layout_marginLeft="10dp"/>

				</LinearLayout>

				<View
					style="@style/Divider"/>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:layout_margin="10dp">

					<EditText
						android:layout_height="wrap_content"
						android:inputType="numberDecimal"
						android:layout_width="wrap_content"
						android:ems="10"
						android:hint="5th Semester SGPA"
						android:id="@+id/sgpa5"/>

					<EditText
						android:layout_height="wrap_content"
						android:inputType="number"
						android:layout_width="wrap_content"
						android:ems="10"
						android:hint="Credit : 24"
						android:id="@+id/crdt5"
						android:layout_marginLeft="10dp"/>

				</LinearLayout>

				<View
					style="@style/Divider"/>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:layout_margin="10dp">

					<EditText
						android:layout_height="wrap_content"
						android:inputType="numberDecimal"
						android:layout_width="wrap_content"
						android:ems="10"
						android:hint="6th Semester SGPA"
						android:id="@+id/sgpa6"/>

					<EditText
						android:layout_height="wrap_content"
						android:inputType="number"
						android:layout_width="wrap_content"
						android:ems="10"
						android:hint="Credit : 24"
						android:id="@+id/crdt6"
						android:layout_marginLeft="10dp"/>

				</LinearLayout>

				<View
					style="@style/Divider"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:orientation="horizontal">

				<Button
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="CGPA"
					android:background="#1D9F03"
					android:textStyle="bold"
					android:typeface="monospace"
					android:textColor="#FFFFFF"
					android:textSize="25sp"
					android:id="@+id/cgpa_butt"
					android:onClick="doSum"/>

				<Button
					style="?android:attr/buttonStyleSmall"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="RESET"
					android:typeface="serif"
					android:background="#0A4873"
					android:textColor="#FFFFFF"
					android:layout_marginLeft="50dp"
					android:id="@+id/resetbutt"/>

			</LinearLayout>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:layout_width="match_parent"
				android:text="RESULT"
				android:gravity="center"
				android:typeface="monospace"
				android:textStyle="bold"
				android:textSize="25sp"
				android:padding="10dp"
				android:singleLine="true"
				android:textScaleX="2.0"
				android:textColor="#000000"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:padding="10dp"
				android:gravity="center">

				<TextView
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:layout_width="wrap_content"
					android:text="@string/cgpa_res"
					android:typeface="monospace"
					android:singleLine="true"/>

				<TextView
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_width="wrap_content"
					android:layout_marginLeft="10dp"
					android:id="@+id/cgpa_view"
					android:typeface="serif"
					android:textColor="#026822"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_marginTop="10dp"
				android:gravity="center"
				android:padding="10dp">

				<TextView
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:layout_width="wrap_content"
					android:text="@string/cgpa_per_res"
					android:typeface="monospace"
					android:singleLine="true"/>

				<TextView
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_width="wrap_content"
					android:layout_marginLeft="10dp"
					android:id="@+id/pers_view"
					android:typeface="serif"
					android:textColor="#026822"/>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

</ScrollView>

